# hedgehog

./: .gitignore  AGENTS.md  CLAUDE.md  FILE_STRUCTURE.md  LICENSE  README.md  calculate_metrics.py  config.yml  config_utils.py  demo_scenarios.md  environment.yml  lefthook.yml  logger_config.py  main.py  package.json  pyproject.toml  pytest.ini  run-tui.sh  test_folder_logic.py
.github/workflows/: ci.yaml  publish-pypi-token-fallback.yml  publish-pypi.yml  release.yaml  release.yml
configs/: config.yml  config_descriptors.yml  config_docking.yml  config_molScore.yml  config_retroSynth.yml  config_structFilters.yml  config_utils.py
data/: KRAS_inhibs_seen.smi  KRAS_inhibs_unseen.smi  KRAS_target_mols.csv  README.md  common_alerts_collection.csv
data/test/: 05C_from_7EW9.sdf  generated_mols.csv  moses_1000.csv  target_mols.csv
descriptors/: README.md  main.py  utils.py
docking/: README.md  main.py  run_docking.py  smina_example.ini  utils.py
docs/: package.json  pnpm-lock.yaml  tsconfig.json
docs/app/: layout.tsx
docs/app/[[...mdxPath]]/: page.tsx
docs/content/: _meta.ts  cli.mdx  getting-started.mdx  index.mdx
docs/content/advanced/: _meta.ts  architecture.mdx  development.mdx  troubleshooting.mdx
docs/content/configuration/: _meta.ts  index.mdx  reference.mdx
docs/content/pipeline/: _meta.ts  descriptors.mdx  docking-filters.mdx  docking.mdx  index.mdx  structural-filters.mdx  synthesis.mdx
docs/content/reporting/: _meta.ts  index.mdx  moleval.mdx
modules/: README.md  install_aizynthfinder.sh
modules/aizynthfinder_stub/: pyproject.toml
modules/aizynthfinder_stub/src/aizynthfinder/: __init__.py  cli.py
modules/lilly_medchem_rules/: README.md
modules/pyscreener_stub/: pyproject.toml
modules/pyscreener_stub/src/pyscreener/: __init__.py  cli.py
modules/syba/: .gitignore  README.md
modules/syba/syba/: syba.py
scripts/: check_pipeline.py
scripts/slurm/: hedgehog_all_models_32c.sbatch  hedgehog_array_small.sbatch  hedgehog_resume_from_synthesis_32c.sbatch  link_current_array_runs.sh  submit_all_models_small.sh
sminaScore/: docking.ipynb
src/: sitecustomize.py
src/hedge/: __init__.py  main.py  pipeline.py
src/hedge/_compat/: __init__.py
src/hedge/configs/: config.yml  config_docking.yml  config_synthesis.yml  logger.py
src/hedge/stages/descriptors/: README.md  main.py  utils.py
src/hedge/stages/docking/: README.md  main.py  smina_example.ini  utils.py
src/hedge/stages/structFilters/: README.md  main.py  utils.py
src/hedge/stages/synthesis/: RAScore.json  README.md  logging.yml  main.py  utils.py
src/hedge/utils/: __init__.py  data_prep.py  mol_index.py
src/hedgehog/: __init__.py  main.py  pipeline.py
src/hedgehog/_compat/: __init__.py
src/hedgehog/configs/: config.yml  config_descriptors.yml  config_docking.yml  config_docking_filters.yml  config_docking_slurm_10k.yml  config_docking_slurm_10k_32c.yml  config_mol_prep.yml  config_moleval.yml  config_slurm_10k.yml  config_slurm_10k_32c.yml  config_structFilters.yml  config_synthesis.yml  logger.py
src/hedgehog/reporting/: __init__.py  moleval_metrics.py  plots.py  report_generator.py
src/hedgehog/reporting/templates/: report.html
src/hedgehog/setup/: __init__.py  _aizynthfinder.py  _download.py  _gnina.py  _rascore.py  _shepherd_worker.py
src/hedgehog/stages/descriptors/: README.md  main.py  utils.py
src/hedgehog/stages/docking/: README.md  main.py  utils.py
src/hedgehog/stages/dockingFilters/: __init__.py  main.py  utils.py
src/hedgehog/stages/molPrep/: __init__.py  main.py  utils.py
src/hedgehog/stages/structFilters/: README.md  main.py  utils.py
src/hedgehog/stages/synthesis/: README.md  main.py  utils.py
src/hedgehog/tui_backend/: __init__.py  __main__.py  server.py  validators.py
src/hedgehog/tui_backend/handlers/: __init__.py  config.py  files.py  history.py  pipeline.py  validation.py
src/hedgehog/utils/: __init__.py  data_prep.py  datamol_import.py  input_paths.py  mce18.py  mol_index.py  parallel.py
src/hedgehog/workers/: __init__.py  rascore_worker.py  shepherd_worker.py
structFilters/: README.md  main.py  plot_filter_failures.py  utils.py
tests/: README.md  conftest.py  test_cli.py  test_data_prep.py  test_descriptors.py  test_docking.py  test_docking_filters.py  test_e2e_pipeline.py  test_external_deps.py  test_logger.py  test_main.py  test_mce18.py  test_mol_index.py  test_mol_prep.py  test_moleval_metrics.py  test_parallel.py  test_parallel_map_progress.py  test_pipeline.py  test_reporting.py  test_setup_aizynthfinder.py  test_setup_download.py  test_setup_gnina.py  test_setup_rascore.py  test_setup_shepherd_worker.py  test_struct_filters.py  test_structfilters_flags.py  test_structfilters_inmemory_combine.py  test_structfilters_prepare_once.py  test_synthesis.py  test_tui_backend.py
tests/fixtures/: test_config.yml  test_config_descriptors.yml  test_config_docking.yml  test_config_structFilters.yml  test_molecules.csv
tui/: README.md  package-lock.json  package.json
tui/src/: App.tsx  index.tsx
tui/src/components/: ConfigForm.tsx  ConfirmDialog.tsx  DataRow.tsx  DescriptorTable.tsx  FileBrowser.tsx  Footer.tsx  Header.tsx  HelpOverlay.tsx  ProgressBar.tsx  SearchIndicator.tsx  Section.tsx  Spinner.tsx  Toast.tsx
tui/src/hooks/: useEditableField.ts  useSearch.ts  useTerminalSize.ts
tui/src/screens/: ConfigDescriptors.tsx  ConfigDocking.tsx  ConfigFilters.tsx  ConfigMain.tsx  ConfigRetrosynthesis.tsx  ConfigSynthesis.tsx  History.tsx  PipelineRunner.tsx  Results.tsx  Welcome.tsx
tui/src/screens/wizard/: InputSelection.tsx  QuickConfig.tsx  ReviewRun.tsx  StageOrder.tsx  StageSelection.tsx  index.ts  runPipeline.ts  stageMetadata.ts
tui/src/services/: python-bridge.ts  rpc-client.ts
tui/src/store/: index.ts
tui/src/types/: index.ts
tui/src/utils/: colors.ts  format.ts  job-status.ts  logger.ts  object-path.ts
utils/: data_prep.py  mol_index.py
