[project]
name = "hedge"
version = "1.0.0"
description = "Hierarchical Evaluation of Drug GEnerators"
requires-python = ">=3.10"
dependencies = [
    "polars>=0.20.0",
    "numpy>=1.21.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "pyyaml>=5.4.0",
    "rdkit>=2022.3.0",
    "datamol>=0.8.0",
    "medchem>=0.1.0",
    "tqdm>=4.60.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "torch>=1.12.0",
    "dask>=2023.0.0",
    "distributed>=2023.0.0",
    "func-timeout>=4.3.0",
    "python-Levenshtein>=0.12.0",
    "requests>=2.28.0",
    "syba",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
lint = ["ruff", "mypy", "pyright"]
test = ["pytest"]

[project.scripts]
hedge = "hedge.main:app"

[tool.setuptools]
packages = {find = {where = ["src"]}}
package-dir = {"" = "src"}
py-modules = ["sitecustomize"]

[tool.setuptools.package-data]
"*" = ["*.yml", "*.yaml", "*.csv", "*.json"]

[tool.ruff]
target-version = "py310"
src = ["src"]
line-length = 120
lint.select = [
    "E",
    "F",
    "W",
    "I",
    "N",
]
lint.ignore = [
    "E501",
    "N803",
    "N806",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
