[project]
name = "hedge"
version = "1.0.0"
description = "Hierarchical Evaluation of Drug GEnerators"
requires-python = ">=3.10"
dependencies = [
    "pandas>=1.3.0,<2.2",
    "numpy>=1.21.0,<2.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "pyyaml>=5.4.0",
    "rdkit>=2022.3.0",
    "datamol>=0.8.0",
    "medchem>=0.1.0",
    "pandarallel>=1.6.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "syba",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
lint = ["ruff", "mypy", "pyright"]
test = ["pytest"]

[project.scripts]
hedge = "hedge.main:app"

[tool.setuptools]
packages = {find = {where = ["src"]}}
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.yml", "*.yaml", "*.csv", "*.json"]

[tool.ruff]
target-version = "py310"
src = ["src"]
extend-exclude = [
    "modules",
]
lint.select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
lint.ignore = [
    "COM812",  # conflicts with formatter
    "ISC001",  # conflicts with formatter
    "D100",    # module docstrings optional
    "D104",    # package docstrings optional
    "PT001",
    "PT023",
    "PLR0913", # allow >5 params
    "E501", # allow line too long
]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = [
    "F401",
    "F403",
]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.uv.sources]
syba = { path = "modules/syba", editable = true }
