[project]
name = "aizynthfinder"
version = "0.0.0"
description = "Stub AiZynthFinder package bundled with Hedge"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
aizynthcli = "aizynthfinder.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["aizynthfinder"]
