[project]
name = "pyscreener"
version = "0.0.0"
description = "Stub pyscreener package bundled with Hedge"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
pyscreener = "pyscreener.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["pyscreener"]
